--- a/Qwa.Angular/src/index.html
+++ b/Qwa.Angular/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Qwa.Angular</title>
+  <title>Qwa</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
